--- a/Data.ipynb
+++ b/Data.ipynb
@@ -315,6 +315,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fixing the AdjOE and AdjDE columns\n",
+    "def keep_one_decimal(value):\n",
+    "    return re.sub(r'(\\.\\d).*', r'\\1', str(value))\n",
+    "df_bart['AdjOE'] = df_bart['AdjOE'].apply(keep_one_decimal)\n",
+    "df_bart['AdjDE'] = df_bart['AdjDE'].apply(keep_one_decimal)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
    "outputs": [],
@@ -330,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -386,8 +399,8 @@
        "      <td>39</td>\n",
        "      <td>31</td>\n",
        "      <td>8</td>\n",
-       "      <td>121.53</td>\n",
-       "      <td>91.29</td>\n",
+       "      <td>121.5</td>\n",
+       "      <td>91.2</td>\n",
        "      <td>.9643</td>\n",
        "      <td>53.933</td>\n",
        "      <td>...</td>\n",
@@ -410,8 +423,8 @@
        "      <td>37</td>\n",
        "      <td>31</td>\n",
        "      <td>6</td>\n",
-       "      <td>116.115</td>\n",
-       "      <td>89.03</td>\n",
+       "      <td>116.1</td>\n",
+       "      <td>89.0</td>\n",
        "      <td>.9548</td>\n",
        "      <td>52.186</td>\n",
        "      <td>...</td>\n",
@@ -434,8 +447,8 @@
        "      <td>37</td>\n",
        "      <td>33</td>\n",
        "      <td>4</td>\n",
-       "      <td>117.313</td>\n",
-       "      <td>90.35</td>\n",
+       "      <td>117.3</td>\n",
+       "      <td>90.3</td>\n",
        "      <td>.9532</td>\n",
        "      <td>52.379</td>\n",
        "      <td>...</td>\n",
@@ -458,8 +471,8 @@
        "      <td>37</td>\n",
        "      <td>31</td>\n",
        "      <td>6</td>\n",
-       "      <td>114.923</td>\n",
-       "      <td>88.52</td>\n",
+       "      <td>114.9</td>\n",
+       "      <td>88.5</td>\n",
        "      <td>.9528</td>\n",
        "      <td>51.1146</td>\n",
        "      <td>...</td>\n",
@@ -482,8 +495,8 @@
        "      <td>36</td>\n",
        "      <td>25</td>\n",
        "      <td>11</td>\n",
-       "      <td>111.257</td>\n",
-       "      <td>87.51</td>\n",
+       "      <td>111.2</td>\n",
+       "      <td>87.5</td>\n",
        "      <td>.9401</td>\n",
        "      <td>49.9210</td>\n",
        "      <td>...</td>\n",
@@ -530,8 +543,8 @@
        "      <td>27</td>\n",
        "      <td>10</td>\n",
        "      <td>17</td>\n",
-       "      <td>90.2343</td>\n",
-       "      <td>113.4329</td>\n",
+       "      <td>90.2</td>\n",
+       "      <td>113.4</td>\n",
        "      <td>.0669</td>\n",
        "      <td>45.7338</td>\n",
        "      <td>...</td>\n",
@@ -554,8 +567,8 @@
        "      <td>27</td>\n",
        "      <td>5</td>\n",
        "      <td>22</td>\n",
-       "      <td>84.8353</td>\n",
-       "      <td>107.0229</td>\n",
+       "      <td>84.8</td>\n",
+       "      <td>107.0</td>\n",
        "      <td>.0649</td>\n",
        "      <td>44347</td>\n",
        "      <td>...</td>\n",
@@ -578,8 +591,8 @@
        "      <td>30</td>\n",
        "      <td>3</td>\n",
        "      <td>27</td>\n",
-       "      <td>89.6346</td>\n",
-       "      <td>118.3350</td>\n",
+       "      <td>89.6</td>\n",
+       "      <td>118.3</td>\n",
        "      <td>.0393</td>\n",
        "      <td>44.2346</td>\n",
        "      <td>...</td>\n",
@@ -602,8 +615,8 @@
        "      <td>29</td>\n",
        "      <td>6</td>\n",
        "      <td>23</td>\n",
-       "      <td>85.4352</td>\n",
-       "      <td>113.0321</td>\n",
+       "      <td>85.4</td>\n",
+       "      <td>113.0</td>\n",
        "      <td>.0384</td>\n",
        "      <td>40353</td>\n",
        "      <td>...</td>\n",
@@ -626,8 +639,8 @@
        "      <td>30</td>\n",
        "      <td>7</td>\n",
        "      <td>23</td>\n",
-       "      <td>86.8351</td>\n",
-       "      <td>115.2341</td>\n",
+       "      <td>86.8</td>\n",
+       "      <td>115.2</td>\n",
        "      <td>.0371</td>\n",
        "      <td>43.5350</td>\n",
        "      <td>...</td>\n",
@@ -648,18 +661,18 @@
        "</div>"
       ],
       "text/plain": [
-       "1      Rk                    Team  Conf   G  Wins  Losses    AdjOE     AdjDE  \\\n",
-       "0       1             Connecticut    BE  39    31       8   121.53     91.29   \n",
-       "1       2                 Alabama   SEC  37    31       6  116.115     89.03   \n",
-       "2       3                 Houston  Amer  37    33       4  117.313     90.35   \n",
-       "3       4                    UCLA   P12  37    31       6  114.923     88.52   \n",
-       "4       5               Tennessee   SEC  36    25      11  111.257     87.51   \n",
-       "...   ...                     ...   ...  ..   ...     ...      ...       ...   \n",
-       "1769  349              Alcorn St.  SWAC  27    10      17  90.2343  113.4329   \n",
-       "1770  350           New Hampshire    AE  27     5      22  84.8353  107.0229   \n",
-       "1771  351             Chicago St.   WAC  30     3      27  89.6346  118.3350   \n",
-       "1772  352            Delaware St.  MEAC  29     6      23  85.4352  113.0321   \n",
-       "1773  353  Maryland Eastern Shore  MEAC  30     7      23  86.8351  115.2341   \n",
+       "1      Rk                    Team  Conf   G  Wins  Losses  AdjOE  AdjDE  \\\n",
+       "0       1             Connecticut    BE  39    31       8  121.5   91.2   \n",
+       "1       2                 Alabama   SEC  37    31       6  116.1   89.0   \n",
+       "2       3                 Houston  Amer  37    33       4  117.3   90.3   \n",
+       "3       4                    UCLA   P12  37    31       6  114.9   88.5   \n",
+       "4       5               Tennessee   SEC  36    25      11  111.2   87.5   \n",
+       "...   ...                     ...   ...  ..   ...     ...    ...    ...   \n",
+       "1769  349              Alcorn St.  SWAC  27    10      17   90.2  113.4   \n",
+       "1770  350           New Hampshire    AE  27     5      22   84.8  107.0   \n",
+       "1771  351             Chicago St.   WAC  30     3      27   89.6  118.3   \n",
+       "1772  352            Delaware St.  MEAC  29     6      23   85.4  113.0   \n",
+       "1773  353  Maryland Eastern Shore  MEAC  30     7      23   86.8  115.2   \n",
        "\n",
        "1    Barthag     EFG%  ...      FTR     FTRD      2P%     2P%D      3P%  \\\n",
        "0      .9643   53.933  ...  30.8199  37.8312   53.650    44.49   36.359   \n",
@@ -690,7 +703,7 @@
        "[1774 rows x 25 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
